shady-KISS-skin History
-------------------------------------------
2016-01-12:
- Added EPG-images in displaymenudetailepg and plug-tvguideng-detail

2016-01-08:
- Added setup for numbering in main- and setupmenu

2015-09-10:
- Removed some useless code

2015-09-03:
- Changed format of datetime

2015-08-31:
- Fixed scrollheight of actor-thumbs, fixed areawidht of datetime in menus

2015-08-11:
- Changed setup of menubars

2015-08-09:
- Added horizontal menu in displaymenurecordings

2015-08-01:
- Added discusage in menutimers, made ist optional

2015-07-31:
- Switched vdrusagestring to graphical usedpercent

2015-07-30:
- Added percentseenbar in currentelement of recordings
- Added progressmodeonly in displayreplay
- Added vdrusagestring in menurecordings

2015-07-29:
- Fixed layer for timeshifttotal

2015-07-27:
- Improved visibility of timeshift-progressbar

2015-07-27:
- Fixed area of currenttime in displayreplay
- Switched font to Open Sans

2015-07-17:
- Commented colors in theme.xml
- Small fixes

2015-07-15:
- Added svg-templates
- Added condition for recdate in displayreplay
- Removed obsolte colours
- Fixed scrollbars in main- and setup-menu

2015-07-11:
- Some small fixes
- Added scrollbars for plex-plugin
- Fixed time-format 
- Test areacontainer in displaymenurecordings
- Added new buttonPlexCover

2015-07-09:
- Added setup for long elapsedbars
- Added bar for livebuffer in displaychannel
- Added setup for timeshifttotal in displayreplay
- Fixed scaletv in plug-tvguideng-detail

2015-07-08:
- Added fritzbox-plugin-section to displaymenudefault (patch provided by beinhart@vdrportal)
- Reorganized timers, lastrecs and infos in mainmenu

2015-07-07:
- Small fixes

2015-07-06:
- Fixed condition for markers in menurecordings
- Reorganized markers for recordings
- Removed cutted-symbol for recordings-folders
- Added time-tag
- Fixed typo

2015-07-05:
- Added channelname if no channelogo exists in schedules-list

2015-07-04: