@@ -1,5 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
+
+2016-01-13:
+- Added EPG-images in displaymenudetailrecording
+
 2016-01-12:
 - Added EPG-images in displaymenudetailepg and plug-tvguideng-detail
 
